--- a/app/assets/stylesheets/global/songs.css.scss
+++ b/app/assets/stylesheets/global/songs.css.scss
@@ -11,7 +11,7 @@
     overflow: hidden;
     
     &:nth-child(2n+1) {
-      background: #f0f8fc;
+      background: #ebf5fa;
     }
 
     &.show-play {
